--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -112,8 +112,8 @@ line-height: normal;
     color: #991C3A;
       /* border: rgb(250 204 21) 16px solid; */
       border-radius: 8px;
-      width: 30vw;
-      font-size: 32px;
+      /* width: 60vw; */
+      font-size: 25px;
       background: #EDEEDD;
       padding: 0.5rem;
       margin:1rem auto;
